<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_right"
        android:title="Left"
        android:icon="@drawable/left_active"
        app:showAsAction="ifRoom"
        >
    </item>

    <item
        android:id="@+id/action_left"
        android:title="Right"
        android:icon="@drawable/right_active"
        app:showAsAction="ifRoom"
        >
    </item>


</menu>