...
            <View
                android:layout_width="0.4dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/relativeDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="X days left"
                android:textSize="9pt"
...
