<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.intelligent.morning06.lecturemate.LecturesActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/Delete"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="Delete"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/Edit"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Edit"
        android:visible="true"
        app:showAsAction="always" />


</menu>
