...
    <string name="title_activity_NoteView">Note</string>
    <string name="title_activity_ImageView">Image</string>
    <string name="title_activity_DateView">Date</string>
    <string name="title_activity_VideoView">Video</string>

    <string name="title_activity_Lectures_ButtonAddLecture">Add Lecture</string>
    <string name="title_activity_Lectures_ButtonAdd">ADD</string>
    <string name="title_activity_Lectures_ButtonCancel">CANCEL</string>

    <!--Error messages-->

    <string name="error_databaseAccessLecture_alreadyExists">Lecture cannot be added to DataBase, it already exists</string>

...
