<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.intelligent.morning06.lecturemate.NotesCreateActivity"
    tools:showIn="@layout/activity_notes_create">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Title"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textSize="18pt" />

        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="Note text"
            android:inputType="textAutoCorrect|textAutoComplete|textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:textSize="9pt" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
